# tigervnc

./: CMakeLists.txt  PORTABLE-CN.md  config.h.in
.github/workflows/: build.yml
cmake/: StaticBuild.cmake  VerifyPortableExe.cmake
common/core/: i18n.cxx  xdgdirs.cxx  xdgdirs.h
common/rfb/: CMakeLists.txt
po/: zh_CN.po
release/: CMakeLists.txt  portable-vncviewer.ini
vncviewer/: CMakeLists.txt  ServerDialog.cxx  parameters.cxx  parameters.h  resource.h  vncviewer.cxx  vncviewer.rc.in
vncviewer/fltk/: Fl_Navigation.cxx
